--- a/src/Analyzers/AspNetMigrator.Analyzers.CodeFixes/Microsoft.UpgradeAssistant.CSharp.CodeFixes.csproj
+++ b/src/Analyzers/AspNetMigrator.Analyzers.CodeFixes/Microsoft.UpgradeAssistant.CSharp.CodeFixes.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
-    <ProjectReference Include="..\AspNetMigrator.Analyzers\AspNetMigrator.Analyzers.csproj" />
+    <ProjectReference Include="..\AspNetMigrator.Analyzers\Microsoft.UpgradeAssistant.CSharp.Analyzers.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Templates\*.cs" />
