--- a/src/AspNetMigrator.MSBuild/Microsoft.UpgradeAssistant.MSBuild.csproj
+++ b/src/AspNetMigrator.MSBuild/Microsoft.UpgradeAssistant.MSBuild.csproj
@@ -12,6 +12,6 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AspNetMigrator.Abstractions\AspNetMigrator.Abstractions.csproj" />
+    <ProjectReference Include="..\AspNetMigrator.Abstractions\Microsoft.UpgradeAssistant.Abstractions.csproj" />
   </ItemGroup>
 </Project>
