--- a/src/AspNetMigrator.Migrator/Microsoft.UpgradeAssistant.Migrator.csproj
+++ b/src/AspNetMigrator.Migrator/Microsoft.UpgradeAssistant.Migrator.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\AspNetMigrator.Abstractions\AspNetMigrator.Abstractions.csproj" />
+    <ProjectReference Include="..\AspNetMigrator.Abstractions\Microsoft.UpgradeAssistant.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
