--- a/src/AspNetMigrator.Solution/Microsoft.UpgradeAssistant.Steps.Solution.csproj
+++ b/src/AspNetMigrator.Solution/Microsoft.UpgradeAssistant.Steps.Solution.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AspNetMigrator.Abstractions\AspNetMigrator.Abstractions.csproj" />
+    <ProjectReference Include="..\AspNetMigrator.Abstractions\Microsoft.UpgradeAssistant.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
