--- a/src/AspNetMigrator.SourceUpdater/Microsoft.UpgradeAssistant.Steps.Source.csproj
+++ b/src/AspNetMigrator.SourceUpdater/Microsoft.UpgradeAssistant.Steps.Source.csproj
@@ -4,8 +4,8 @@
     <RootNamespace>AspNetMigrator.SourceUpdater</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AspNetMigrator.Abstractions\AspNetMigrator.Abstractions.csproj" />
-    <ProjectReference Include="..\AspNetMigrator.Extensions\AspNetMigrator.Extensions.csproj" />
+    <ProjectReference Include="..\AspNetMigrator.Abstractions\Microsoft.UpgradeAssistant.Abstractions.csproj" />
+    <ProjectReference Include="..\AspNetMigrator.Extensions\Microsoft.UpgradeAssistant.Extensions.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" PrivateAssets="all" />
