--- a/src/AspNetMigrator.TemplateUpdater/Microsoft.UpgradeAssistant.Steps.Templates.csproj
+++ b/src/AspNetMigrator.TemplateUpdater/Microsoft.UpgradeAssistant.Steps.Templates.csproj
@@ -11,9 +11,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" />
-    <ProjectReference Include="..\AspNetMigrator.Abstractions\AspNetMigrator.Abstractions.csproj" />
+    <ProjectReference Include="..\AspNetMigrator.Abstractions\Microsoft.UpgradeAssistant.Abstractions.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AspNetMigrator.Extensions\AspNetMigrator.Extensions.csproj" />
+    <ProjectReference Include="..\AspNetMigrator.Extensions\Microsoft.UpgradeAssistant.Extensions.csproj" />
   </ItemGroup>
 </Project>
