--- a/src/AspNetMigrator.TryConvertUpdater/Microsoft.UpgradeAssistant.Steps.ProjectFormat.csproj
+++ b/src/AspNetMigrator.TryConvertUpdater/Microsoft.UpgradeAssistant.Steps.ProjectFormat.csproj
@@ -4,7 +4,7 @@
     <RootNamespace>AspNetMigrator.TryConvertUpdater</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AspNetMigrator.Abstractions\AspNetMigrator.Abstractions.csproj" />
+    <ProjectReference Include="..\AspNetMigrator.Abstractions\Microsoft.UpgradeAssistant.Abstractions.csproj" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
     <PackageReference Include="Microsoft.Extensions.Options" />
   </ItemGroup>
