Add NuGet.Frameworks reference to AspNetMigrator.PackageUpdater.Tests

--- a/tests/AspNetMigrator.PackageUpdater.Test/AspNetMigrator.PackageUpdater.Test.csproj
+++ b/tests/AspNetMigrator.PackageUpdater.Test/AspNetMigrator.PackageUpdater.Test.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MSTest.TestAdapter" />
     <PackageReference Include="MSTest.TestFramework" />
     <PackageReference Include="coverlet.collector" />
+    <PackageReference Include="Nuget.Frameworks" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\AspNetMigrator.Migrator\AspNetMigrator.Migrator.csproj" />
