Set target TFM when loading projects (#131)
This updates the MSBuildMigrationContext to identify recommended target TFM for projects it loads based on project style, output type, project dependencies, and user preferences (current/LTS).

In a subsequent PR, I'll add a new migration step that updates projects to this target TFM in a new migration step (distinct from the try-convert migration step, which will be changed to not update TFM).

Fixes #102
Fixes #128

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -30,6 +30,7 @@
     <PackageVersion Include="MSTest.TestAdapter" Version="2.1.1" />
     <PackageVersion Include="MSTest.TestFramework" Version="2.1.2" />
     <PackageVersion Include="NSubstitute" Version="4.2.2" />
+    <PackageVersion Include="NuGet.Frameworks" Version="5.8.0" />
     <PackageVersion Include="NuGet.ProjectModel" Version="5.8.0" />
     <PackageVersion Include="Serilog" Version="2.10.0" />
     <PackageVersion Include="Serilog.Extensions.Hosting" Version="3.1.0" />
