--- a/src/AspNetMigrator.Console/appsettings.json
+++ b/src/AspNetMigrator.Console/appsettings.json
@@ -17,6 +17,10 @@
   "TemplateInserter": {
     "TemplatePath": "Templates"
   },
+  "TFMSelector": {
+    "CurrentTFMBase": "net5.0",
+    "LTSTFMBase": "net5.0"
+  },
   "TryConvertProjectConverter": {
     "TryConvertPath": "%USERPROFILE%\\.dotnet\\tools\\try-convert.exe"
   },
@@ -24,5 +28,4 @@
   "Portability": {
     "ServiceEndpoint": "https://portability.dot.net"
   }
-
 }
