--- a/tests/AspNetMigrator.Analyzers.Test/Microsoft.UpgradeAssistant.Analyzers.Test.csproj
+++ b/tests/AspNetMigrator.Analyzers.Test/Microsoft.UpgradeAssistant.Analyzers.Test.csproj
@@ -16,8 +16,8 @@
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Analyzers\AspNetMigrator.Analyzers\Microsoft.UpgradeAssistant.CSharp.Analyzers.csproj" />
-    <ProjectReference Include="..\..\src\Analyzers\AspNetMigrator.Analyzers.CodeFixes\Microsoft.UpgradeAssistant.CSharp.CodeFixes.csproj" />
+    <ProjectReference Include="..\..\src\Analyzers\AspNetMigrator.Analyzers\Microsoft.UpgradeAssistant.Extensions.Default.CSharp.Analyzers.csproj" />
+    <ProjectReference Include="..\..\src\Analyzers\AspNetMigrator.Analyzers.CodeFixes\Microsoft.UpgradeAssistant.Extensions.Default.CSharp.CodeFixes.csproj" />
     <ProjectReference Include="..\..\src\AspNetMigrator.SourceUpdater\Microsoft.UpgradeAssistant.Steps.Source.csproj" />
     <ProjectReference Include="..\..\src\AspNetMigrator.MSBuild\Microsoft.UpgradeAssistant.MSBuild.csproj" />
   </ItemGroup>
