--- a/src/AspNetMigrator.Console/Microsoft.UpgradeAssistant.Console.csproj
+++ b/src/AspNetMigrator.Console/Microsoft.UpgradeAssistant.Console.csproj
@@ -39,10 +39,10 @@
     <!-- These projects aren't used directly by this project, but are included here so that they're
          sure to be built prior to copying their binary output into this project's 'SourceUpdaters'
          and 'ConfigUpdaters' directories. -->
-    <ProjectReference Include="..\Analyzers\AspNetMigrator.Analyzers\Microsoft.UpgradeAssistant.CSharp.Analyzers.csproj" />
-    <ProjectReference Include="..\Analyzers\AspNetMigrator.Analyzers.CodeFixes\Microsoft.UpgradeAssistant.CSharp.CodeFixes.csproj" />
+    <ProjectReference Include="..\Analyzers\AspNetMigrator.Analyzers\Microsoft.UpgradeAssistant.Extensions.Default.CSharp.Analyzers.csproj" />
+    <ProjectReference Include="..\Analyzers\AspNetMigrator.Analyzers.CodeFixes\Microsoft.UpgradeAssistant.Extensions.Default.CSharp.CodeFixes.csproj" />
     <ProjectReference Include="..\AspNetMigrator.ConfigUpdater\Microsoft.UpgradeAssistant.Steps.Configuration.csproj" />
-    <ProjectReference Include="..\ConfigUpdaters\AspNetMigrator.DefaultConfigUpdaters\Microsoft.UpgradeAssistant.Extension.Default.ConfigUpdaters.csproj" />
+    <ProjectReference Include="..\ConfigUpdaters\AspNetMigrator.DefaultConfigUpdaters\Microsoft.UpgradeAssistant.Extensions.Default.ConfigUpdaters.csproj" />
     <ProjectReference Include="..\AspNetMigrator.Extensions\Microsoft.UpgradeAssistant.Extensions.csproj" />
   </ItemGroup>
   <!-- Copy analyzers and code fixers into \SourceUpdaters since that's where the app will probe for them. -->
@@ -52,8 +52,9 @@
       <ConfigUpdateFilePath>$(OutputPath)ConfigUpdaters\</ConfigUpdateFilePath>
     </PropertyGroup>
     <ItemGroup>
-      <SourceUpdateFiles Include="$(OutputPath)AspNetMigrator.Analyzers.*" />
-      <ConfigUpdateFiles Include="$(OutputPath)AspNetMigrator.DefaultConfigUpdaters.*" />
+      <SourceUpdateFiles Include="$(OutputPath)Microsoft.UpgradeAssistant.Extensions.Default.CSharp.Analyzers.*" />
+      <SourceUpdateFiles Include="$(OutputPath)Microsoft.UpgradeAssistant.Extensions.Default.CSharp.CodeFixes.*" />
+      <ConfigUpdateFiles Include="$(OutputPath)Microsoft.UpgradeAssistant.Extensions.Default.ConfigUpdaters.*" />
     </ItemGroup>
     <Message Importance="normal" Text="Moving source updaters to $(SourceUpdateFilePath)" />
     <Copy SourceFiles="@(SourceUpdateFiles)" DestinationFolder="$(SourceUpdateFilePath)" ContinueOnError="true" />
