--- a/tests/AspNetMigrator.PackageUpdater.Test/Microsoft.UpgradeAssistant.Steps.Packages.Test.csproj
+++ b/tests/AspNetMigrator.PackageUpdater.Test/Microsoft.UpgradeAssistant.Steps.Packages.Test.csproj
@@ -13,8 +13,8 @@
     <PackageReference Include="Nuget.Frameworks" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\AspNetMigrator.Migrator\AspNetMigrator.Migrator.csproj" />
-    <ProjectReference Include="..\..\src\AspNetMigrator.PackageUpdater\AspNetMigrator.PackageUpdater.csproj" />
-    <ProjectReference Include="..\AspNetMigrator.TestHelpers\AspNetMigrator.TestHelpers.csproj" />
+    <ProjectReference Include="..\..\src\AspNetMigrator.Migrator\Microsoft.UpgradeAssistant.Migrator.csproj" />
+    <ProjectReference Include="..\..\src\AspNetMigrator.PackageUpdater\Microsoft.UpgradeAssistant.Steps.Packages.csproj" />
+    <ProjectReference Include="..\AspNetMigrator.TestHelpers\Microsoft.UpgradeAssistant.TestHelpers.csproj" />
   </ItemGroup>
 </Project>
