--- a/src/AspNetMigrator.MSBuild/Microsoft.UpgradeAssistant.MSBuild.csproj
+++ b/src/AspNetMigrator.MSBuild/Microsoft.UpgradeAssistant.MSBuild.csproj
@@ -14,6 +14,6 @@
     <PackageReference Include="NuGet.Frameworks" ExcludeAssets="runtime" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AspNetMigrator.Abstractions\AspNetMigrator.Abstractions.csproj" />
+    <ProjectReference Include="..\AspNetMigrator.Abstractions\Microsoft.UpgradeAssistant.Abstractions.csproj" />
   </ItemGroup>
 </Project>
