--- a/src/common/Microsoft.UpgradeAssistant.Abstractions/Microsoft.UpgradeAssistant.Abstractions.csproj
+++ b/src/common/Microsoft.UpgradeAssistant.Abstractions/Microsoft.UpgradeAssistant.Abstractions.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>AspNetMigrator</RootNamespace>
+    <RootNamespace>Microsoft.UpgradeAssistant</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" />
