--- a/tests/Microsoft.UpgradeAssistant.TestHelpers/Microsoft.UpgradeAssistant.TestHelpers.csproj
+++ b/tests/Microsoft.UpgradeAssistant.TestHelpers/Microsoft.UpgradeAssistant.TestHelpers.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>Microsoft.UpgradeAssistant</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\common\Microsoft.UpgradeAssistant.Abstractions\Microsoft.UpgradeAssistant.Abstractions.csproj" />
