--- a/tests/tool/IntegrationTests/IntegrationTests.csproj
+++ b/tests/tool/IntegrationTests/IntegrationTests.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="coverlet.collector" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\TestAssets\**\*">
+    <Content Include="..\..\TestAssets\**\*">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
