--- a/src/cli/Microsoft.UpgradeAssistant.Cli/Microsoft.UpgradeAssistant.Cli.csproj
+++ b/src/cli/Microsoft.UpgradeAssistant.Cli/Microsoft.UpgradeAssistant.Cli.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <IsPackable>true</IsPackable>
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>upgrade-assistant</ToolCommandName>
     <PackageId>upgrade-assistant</PackageId>
