Update license in nuget

--- a/src/extensions/default/analyzers/Microsoft.UpgradeAssistant.Extensions.Default.Analyzers.Package/Microsoft.UpgradeAssistant.Extensions.Default.Analyzers.Package.csproj
+++ b/src/extensions/default/analyzers/Microsoft.UpgradeAssistant.Extensions.Default.Analyzers.Package/Microsoft.UpgradeAssistant.Extensions.Default.Analyzers.Package.csproj
@@ -9,7 +9,7 @@
   <PropertyGroup>
     <PackageId>Microsoft.UpgradeAssistant.Extensions.Default.Analyzers</PackageId>
     <Authors>Microsoft</Authors>
-    <PackageLicenseUrl>https://github.com/dotnet/upgrade-assistant/LICENSE.txt</PackageLicenseUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/dotnet/upgrade-assistant</PackageProjectUrl>
     <RepositoryUrl>https://github.com/dotnet/upgrade-assistant</RepositoryUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
