Ignore launchsettings.json

--- a/.gitignore
+++ b/.gitignore
@@ -89,4 +89,4 @@ PublishScripts/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-/src/AspNetMigrator.Console/Properties/launchSettings.json
+launchSettings.json
