--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ on:
 
 env:
   buildConfiguration: Release
+  _BuildConfig: Release
 
 jobs:
   build:
@@ -39,7 +40,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: ./cibuild.cmd /p:OfficialBuild=true /p:_BuildConfig=${{ env.buildConfiguration }}
+      run: ./cibuild.cmd /p:OfficialBuild=true
     - name: Test
       run: dotnet test -c ${{ env.buildConfiguration }}
     - name: Publish Packages
