--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,6 @@ on:
 
 env:
   buildConfiguration: Release
-  Configuration: Release
 
 jobs:
   build:
@@ -40,7 +39,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: ./cibuild.cmd /p:OfficialBuild=true
+      run: ./cibuild.cmd -c ${{ env.buildConfiguration }} /p:OfficialBuild=true
     - name: Test
       run: dotnet test -c ${{ env.buildConfiguration }}
     - name: Publish Packages
